# RainierTrader

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.example.yaml  config.yaml
docs/: PRD.md  Phase3_Advanced_Intelligence.md  Technical_Design.md
openclaw/: README.md  skill.json
rainier_trader/: __init__.py
rainier_trader/adapters/: cli.py  openclaw_skill.py
rainier_trader/clients/: alpaca_client.py  llm_client.py  news_client.py
rainier_trader/config/: defaults.py  settings.py
rainier_trader/core/: orchestrator.py  state.py  workflow.py
rainier_trader/models/: portfolio.py  signal.py  trade.py
rainier_trader/nodes/: analysis.py  decision.py  execution.py  logger.py  market_data.py  risk.py
rainier_trader/storage/: database.py
rainier_trader/utils/: formatting.py  retry.py
tests/: conftest.py  test_analysis.py  test_decision.py  test_execution.py  test_market_data.py  test_risk.py  test_workflow.py
